[package]
name = "kvs"
version = "0.1.0"
authors = ["Komal Sai <bkomalsai@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
criterion = "0.3"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive", "env"] }
failure = "0.1.8"
serde = "1.0.188"
serde_bytes = "0.11.12"
serde_derive = "1.0.189"
serde_json = "1.0.107"
sled = "0.34.7"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.0"

[[bench]]
name = "eng_bench"
harness = false