[package]
name = "kvs"
version = "0.1.0"
authors = ["Komal Sai <bkomalsai@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
criterion = "0.3"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"
axum-macros = "0.3.8"

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
bincode = "1.3.3"
byteorder = "1.5.0"
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive", "env"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
failure = "0.1.8"
hyper = "0.14.27"
little_raft = "0.2.0"
num_cpus = "1.16.0"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = "1.0.188"
serde_bytes = "0.11.12"
serde_derive = "1.0.189"
serde_json = "1.0.107"
sled = "0.34.7"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.0"
tokio = { version = "1.33.0", features = ["full"] }
url-builder = "0.1.1"

[[bench]]
name = "pool_bench"
harness = false
